<resources>
    <string name="app_name">Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_todos_campos">É necessário preencher todos os campos.</string>
    <string name="erro_inesperado">Algo de errado aconteceu! Tente novamente!</string>
    <string name="email_em_uso">Email já está em uso.</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_senha_incorretos">Usuário e/ou senha incorretos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Descrição</string>
    <string name="completa">Completa</string>
    <string name="tarefa_salva_sucesso">Tarefa salva com sucesso.</string>
    <string name="tarefa_incluida_com_sucesso">Tarefa incluída com sucesso.</string>
    <string name="tarefa_atualizada_com_sucesso">Tarefa atualizada com sucesso.</string>
    <string name="tarefa_removida_sucesso">Tarefa removida com sucesso.</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="atualizar_tarefa">Atualizar tarefa</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="prioridade">Prioridade</string>
    <string name="confirmacao">Confirmação</string>
    <string name="cancelar">Cancelar</string>
    <string name="remover">Remover</string>
    <string name="remover_tarefa">Deseja remover a tarefa</string>
    <string name="ola">Olá, </string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda-feira</string>
    <string name="terca">Terça-feira</string>
    <string name="quarta">Quarta-feira</string>
    <string name="quinta">Quinta-feira</string>
    <string name="sexta">Sexta-feira</string>
    <string name="sabado">Sábado</string>
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <string name="pattern_date">dd/MM/yyyy</string>
    <string name="logotipo">Logotipo</string>
    <string name="clique_para_selecionar_a_data">Clique para selecionar a data</string>
    <string name="ola_usuario">Olá, usuário!</string>
    <string name="domingo_25_de_agosto_de_2019">Domingo, 25 de agosto de 2019</string>
    <string name="date">Date</string>
    <string name="feitas">Feitas</string>
    <string name="pendentes">Pendentes</string>
    <string name="sair">Sair</string>
    <string name="botao_entrar">Botão entrar</string>
    <string name="necessario_preencher_todos_campos">É necessário preencher todos os campos.</string>
</resources>
