<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_background"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".views.LoginActivity">

    <ImageView
        android:id="@+id/imageLogoTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16dp"
        android:src="@drawable/ic_logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logotipo" />

    <EditText
        android:id="@+id/editEmailLogin"
        style="@style/mWhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50dp"
        android:layout_marginStart="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen60dp"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/dimen10dp"
        android:elevation="@dimen/dimen5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogoTipo" />

    <EditText
        android:id="@+id/editPasswordLogin"
        style="@style/mWhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50dp"
        android:layout_marginStart="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen16dp"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/dimen10dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailLogin" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/mDefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen64dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPasswordLogin" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/textView"
        style="@style/mWhiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16dp"
        android:hint="@string/nao_tem_uma_conta"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

    <TextView
        android:id="@+id/textRegister"
        style="@style/mWhiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16dp"
        android:hint="@string/cadastre_se"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3" />

</android.support.constraint.ConstraintLayout>