<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dimen15dp"
    android:paddingTop="@dimen/dimen20dp"
    android:paddingEnd="@dimen/dimen15dp">

    <ImageView
        android:id="@+id/imageTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen10dp"
        android:text="@string/descricao"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageTask"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:text="@string/prioridade"
        app:layout_constraintStart_toEndOf="@id/imageTask"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <TextView
        android:id="@+id/textDueDate"
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:layout_marginTop="@dimen/dimen20dp"
        android:background="@color/gray_background_view_task_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPriority" />

</android.support.constraint.ConstraintLayout>